# imwut_2026_fishsense_lite

./: .gitignore  calculate_max_distance.ipynb  calibraiton_analysis_least_squares.ipynb  calibraiton_analysis_no_corrections.ipynb  calibraiton_analysis_with_corrections.ipynb  camera.py  plots.py  pyproject.toml  simulation_analysis.ipynb
calibration_analysis/: baseline.ipynb  baseline_vs_weighted_pca.ipynb  corrections_2d.ipynb  corrections_3d.ipynb  least_squares.ipynb  least_squares_with_corrections_2d.ipynb  pca.ipynb  ransac.ipynb  weighted_pca.ipynb
fishsense_imwut/: camera.py  plots.py
laser_labeling_analysis/: laser_label_analysis.ipynb
reconstruction_analysis/: baseline_known_calibration.ipynb  baseline_without_calibration.ipynb  calculated_calibration.ipynb  known_calibration.ipynb  known_calibration_2d_corrections.ipynb  known_calibration_3d_corrections.ipynb  known_calibration_least_squares.ipynb  known_calibration_odr.ipynb
