[project]
name = "fishsense_imwut"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fishsense-meta",
    "ipykernel>=7.1.0",
    "ipympl>=0.9.8",
    "matplotlib>=3.10.7",
    "scipy>=1.16.3",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
fishsense-meta = { git = "https://github.com/UCSD-E4E/fishsense-core.git" }

[dependency-groups]
dev = [
    "black>=25.12.0",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
module-name = "fishsense_imwut"